--- a/typescript/WebContent/src/index.html
+++ b/typescript/WebContent/src/index.html
@@ -15,13 +15,34 @@
         <div id="header-wrapper" ng-controller="HeaderCtrl">
             <span class="logo pull-left">{{appDetails.title}}</span>
             <span class="tagline pull-left">{{appDetails.tagline}}</span>
-            <div class="nav-wrapper pull-left">
-                <ul class="nav nav-pills">
-                    <li class="active"><a href="#">Books</a></li>
-                    <li><a href="#">Kart</a></li>
-                </ul>
-            </div>
+            
         </div>
-
+	<div id="bookListWrapper" ng-controller="BookListCtrl">
+	<form role="form">
+	  <div class="form-group">
+		<input type="text" class="form-control" placeholder="Search here..."
+			ng-model="searchStr">
+	  </div>
+	</form>
+	</br></br>
+	<ul class="list-unstyled">
+		<li class="book" ng-repeat="book in books | filter:searchStr"
+			style="background: white url('resources/imgs/{{book.imgUrl}}') no-repeat">
+			<div class="book-details clearfix">
+				<h3>{{book.name}}</h3>
+				<p>{{book.price | currency:'Rs.'}}</p>
+				<ul class="list-unstyled list-inline">
+					<li>Rating: {{book.rating}}</li>
+					<li>Binding: {{book.binding | uppercase}}</li>
+					<li>Publisher: {{book.publisher}}</li>
+					<li>Released: {{book.releaseDate}}</li>
+				</ul>
+				<p>{{book.details}}</p>
+				<button class="btn btn-info pull-right" ng-click="addToKart(book)">Add to Kart</button>
+			</div>
+		</li>
+	</ul>
+		</div>
+    </body>
     </body>
 </html>
