Convert to typescript 3

--- a/typescript/WebContent/src/index.html
+++ b/typescript/WebContent/src/index.html
@@ -8,11 +8,11 @@
         <script src="resources/angular.min.js"></script>
          <script src="resources/angular-route.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
-        <script src="src/app.ts"></script>
-         <script src="src/BookListCtrl.ts"></script>
-         <script src="src/BookService.ts"></script>
-         <script src="src/HeaderCtrl.ts"></script>
-         <script src="src/KartService.ts"></script>
+        <script src="src/app.js"></script>
+         <script src="src/BookListCtrl.js"></script>
+         <script src="src/BookService.js"></script>
+         <script src="src/HeaderCtrl.js"></script>
+         <script src="src/KartService.js"></script>
     </head>
     <body>
 
